--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
   text-decoration: none;
   box-sizing: border-box;
   font-family: "Heebo", sans-serif;
+  scroll-behavior: smooth;
 }
 
 :root {
@@ -53,6 +54,10 @@ p {
   .container {
     width: 90%;
   }
+}
+
+body {
+  background-color: var(--background);
 }
 
 /* start header */
@@ -272,3 +277,139 @@ header nav .phone_nav a:hover {
   color: var(--dark-color);
 }
 /* end hero-sec */
+
+/* start about-sec */
+.about-sec {
+  padding: 40px 0;
+}
+
+.about-sec .container {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.about-sec .about_content {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.about-sec .about_content h1 {
+  font-size: 40px;
+  font-family: "Lobster Two", sans-serif;
+}
+
+.about-sec .about_content .about_text {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.about-sec .about_content .about_text p {
+  font-size: 14px;
+  line-height: 1.6;
+}
+
+.about-sec .about_content .about_text .avantages {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.about-sec .about_content .about_text .avantages ul li {
+  padding-left: 10px;
+  line-height: 1.6;
+  display: flex;
+  gap: 3px;
+  align-items: center;
+}
+
+.about-sec .about_content .about_text .avantages ul li i {
+  font-size: 16px;
+  color: var(--main-color);
+}
+
+.about-sec .about_content .about_text .avantages ul li span {
+  font-size: 14px;
+  color: var(--parag-color);
+}
+
+.about-sec .about_content .about_bottom {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.about-sec .about_content .about_bottom .btn_contact {
+  padding: 10px 20px;
+  background-color: var(--main-color);
+  color: #fff;
+  border: 1px solid var(--main-color);
+  border-radius: 30px;
+  font-size: 14px;
+  text-transform: capitalize;
+  transition: 0.3s ease-in-out;
+}
+
+.about-sec .about_content .about_bottom .btn_contact:hover {
+  background-color: transparent;
+  color: var(--main-color);
+}
+
+.about-sec .about_content .about_bottom ul {
+  display: flex;
+  gap: 10px;
+}
+
+.about-sec .about_content .about_bottom ul a {
+  color: var(--dark-color);
+  transition: 0.3s ease-in-out;
+}
+
+.about-sec .about_content .about_bottom ul a:hover {
+  color: var(--main-color);
+  transform: scale(1.4);
+}
+
+.about-sec .about_content .about_bottom ul a li i {
+  font-size: 16px;
+}
+
+.about-sec .about_images {
+  width: 50%;
+  height: 500px;
+  position: relative;
+}
+
+.about-sec .about_images .main_img {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 70%;
+  border-radius: 50%;
+  border: 15px solid #f4c6528d;
+  transition: 0.3s ease-in-out;
+}
+
+.about-sec .about_images .second_img img:hover,
+.about-sec .about_images .main_img:hover {
+  border-color: var(--main-color);
+}
+
+.about-sec .about_images .second_img {
+  position: absolute;
+  top: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.about-sec .about_images .second_img img {
+  width: 45%;
+  border-radius: 50%;
+  border: 13px solid #f4c6528d;
+  transition: 0.3s ease-in-out;
+}
+/* end about-sec */
