edit place of images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -875,3 +875,29 @@ footer .bottom_footer p a:hover {
   color: var(--main-color);
 }
 /* end footer */
+
+
+
+
+
+/************************************************************************************************/
+/*************************************** start responsive ***************************************/
+/************************************************************************************************/
+
+/* start header */
+
+/* end header */
+
+
+
+
+
+
+
+
+
+
+
+/************************************************************************************************/
+/*************************************** end responsive   ***************************************/
+/************************************************************************************************/
