--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,32 @@ body {
   background-color: var(--background);
 }
 
+
+/* start scrollbar */
+
+::-webkit-scrollbar {
+  width: 3px;
+ }
+ 
+::-webkit-scrollbar-track {
+  border: 7px solid var(--background);
+  box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  background-color: #d4d4d8;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: var(--dark-color);
+  border-radius: 6px;
+  cursor: pointer;
+}
+ 
+::-webkit-scrollbar-thumb:hover {
+  background: var(--main-color);
+}
+
+/* end scrollbar */
+
 /* start header */
 header .top_header {
   padding: 10px 0;
