--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,26 +267,34 @@ header nav .page_nav li {
   position: relative;
 }
 
+header nav .page_nav li:hover a,
 header nav .page_nav li.active a {
   color: var(--main-color);
-  transition: 0.3s ease-in-out;
 }
 
-header nav .page_nav li.active::after {
+header nav .page_nav li::after,
+header nav .page_nav li::after {
   content: "";
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 50%;
+  width: 0;
   height: 3px;
   background-color: var(--main-color);
   border-radius: 30px;
+  transition: 0.3s ease-in-out;
+}
+
+header nav .page_nav li:hover::after,
+header nav .page_nav li.active::after {
+  width: 50%;
 }
 
 header nav .page_nav li a {
   font-size: 15px;
   color: var(--black);
   text-transform: capitalize;
+  transition: 0.3s ease-in-out;
 }
 
 header nav .phone_nav a {
